--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "name": "argon",
   "displayName": "Argon",
   "description": "Roblox Studio two-way live sync",
-  "icon": "images/ArgonLogo.png",
-  "version": "0.0.1",
+  "icon": "images/Logo.png",
+  "version": "0.0.2",
   "preview": true,
   "engines": {
     "vscode": "^1.72.0"
   },
+  "keywords": [
+		"Roblox",
+		"Lua",
+    "Luau",
+    "Sync"
+	],
   "categories": [
     "Other"
   ],
   "activationEvents": [
     "*"
   ],
-  "main": "./js/extension.js",
+  "main": "./js/main.js",
   "contributes": {
     "commands": [{
       "command": "argon.run",
@@ -31,7 +37,50 @@
       "command": "argon.update",
       "title": "Update class database",
       "category": "Argon"
-    }]
+    }],
+    "configuration" : {
+      "title": "Argon",
+      "properties": {
+        "argon.directories.rootFolder": {
+          "type": "string",
+          "default": "game",
+          "description": "The name of the root folder",
+          "pattern": "[^ ]",
+          "patternErrorMessage": "This symbol is not allowed"
+        },
+        "argon.directories.separator": {
+          "type": "string",
+          "default": "|",
+          "description": "Sync separator (this symbol cannot be used in an instance name in Roblox Studio)",
+          "pattern": "[^. 0-9a-zA-Z]",
+          "patternErrorMessage": "This symbol is not allowed"
+        },
+        "argon.extension.autoRun": {
+          "type": "boolean",
+          "default": "true",
+          "description": "Whether Argon should start automatically"
+        },
+        "argon.extension.autoUpdate": {
+          "type": "boolean",
+          "default": "false",
+          "description": "Whether Argon should update class database automatically"
+        },
+        "argon.server.host": {
+          "type": "string",
+          "default": "localhost",
+          "description": "The host that server should be running on",
+          "pattern": "[hostname]",
+          "patternErrorMessage": "This symbol is not allowed"
+        },
+        "argon.server.port": {
+          "type": "number",
+          "default": 8000,
+          "description": "The port that server should be running on",
+          "minimum": 0,
+          "maximum": 65535
+        }
+      }
+    }
   },
   "repository": {
     "type": "git",
