--- a/package.json
+++ b/package.json
@@ -100,17 +100,14 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
+    "@types/vscode": "^1.72.0",
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.0",
     "@types/node": "16.x",
-    "@types/vscode": "^1.72.0",
-    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.24.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "vscode": "^1.1.37"
+    "typescript": "^4.8.4",
+    "@vscode/test-electron": "^2.1.5"
   }
 }
