Update 0.3.0 - still in development

--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -4,7 +4,7 @@
   "displayName": "Argon",
   "description": "Roblox Studio two-way live sync of code and instances",
   "icon": "images/Logo.png",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "preview": true,
   "engines": {
     "vscode": "^1.72.0"
@@ -73,6 +73,11 @@
           "default": false,
           "description": "Whether Argon should update class database automatically"
         },
+        "argon.extension.hideNotifications": {
+          "type": "boolean",
+          "default": false,
+          "description": "Whether Argon should hide notifications in the bottom right corner"
+        },
         "argon.server.host": {
           "type": "string",
           "default": "localhost",
@@ -107,14 +112,14 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.72.0",
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.0",
     "@types/node": "16.x",
+    "@types/vscode": "^1.72.0",
+    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.24.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.8.4",
-    "@vscode/test-electron": "^2.1.5"
+    "typescript": "^4.8.4"
   }
 }
