Server sided two-way sync (.source files not working)

--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -75,7 +75,7 @@
         },
         "argon.extension.autoCreateFolder": {
           "type": "boolean",
-          "default": false,
+          "default": true,
           "description": "Whether Argon should create root folder automatically"
         },
         "argon.extension.hideNotifications": {
