--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -4,7 +4,7 @@
   "displayName": "Argon",
   "description": "Roblox Studio two-way live sync of code and instances",
   "icon": "images/Logo.png",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "preview": true,
   "engines": {
     "vscode": "^1.72.0"
@@ -91,7 +91,7 @@
         },
         "argon.extension.openInPreview": {
           "type": "boolean",
-          "default": false,
+          "default": true,
           "description": "Whether Argon should open files in preview mode by default"
         },
         "argon.server.host": {
