Added .properties schema generator and utils file

--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -108,6 +108,10 @@
       {
         "fileMatch": ".argon.json",
         "url": "./config/.argon.schema.json"
+      },
+      {
+        "fileMatch": ".properties.json",
+        "url": "./config/.properties.schema.json"
       }
     ]
   },
