--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -3,8 +3,8 @@
   "name": "argon",
   "displayName": "Argon",
   "description": "Roblox Studio two-way live sync of code and instances",
-  "icon": "./assets/Logo.png",
-  "version": "0.4.3",
+  "icon": "assets/Logo.png",
+  "version": "0.5.0",
   "preview": true,
   "engines": {
     "vscode": "^1.72.0"
@@ -30,6 +30,18 @@
         "command": "argon.openMenu",
         "title": "Open Menu",
         "category": "Argon"
+      },
+      {
+        "command": "argon.startDebugging",
+        "title": "Start Debugging",
+        "category": "Argon"
+      }
+    ],
+    "keybindings":[
+      {
+        "command": "argon.startDebugging",
+        "when": "editorLangId == lua || editorLangId == luau",
+        "key": "f5"
       }
     ],
     "configuration": {
@@ -46,10 +58,7 @@
           "type": "string",
           "default": ".lua",
           "description": "Default extension of script files when ported from Roblox Studio",
-          "enum": [
-            ".lua",
-            ".luau"
-          ]
+          "enum": [".lua", ".luau"]
         },
         "argon.extension.autoRun": {
           "type": "boolean",
@@ -86,6 +95,13 @@
           "default": true,
           "description": "Whether Argon should open files in preview mode by default",
           "order": 5
+        },
+        "argon.extension.debugMode": {
+          "type": "string",
+          "default": "Play",
+          "description": "Whether Argon should Play or Run playtest",
+          "enum": ["Play", "Run"],
+          "order": 6
         },
         "argon.server.host": {
           "type": "string",
@@ -140,9 +156,5 @@
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
     "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "ffi-napi": "^4.0.3",
-    "wcpp": "^1.2.0"
   }
 }
