Added integration with tooling, code improvements

--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -21,7 +21,9 @@
   "activationEvents": [
     "onLanguage:lua",
     "onLanguage:luau",
-    "onCommand:argon.openMenu"
+    "onCommand:argon.openMenu",
+    "workspaceContains:.argon.json",
+    "workspaceContains:default.project.json"
   ],
   "main": "./src/main.js",
   "contributes": {
@@ -50,15 +52,23 @@
         "argon.directories.rootFolder": {
           "type": "string",
           "default": "src",
-          "description": "The name of the root folder",
+          "description": "Default name of the root folder",
           "pattern": "[uri]",
-          "patternErrorMessage": "This symbol is not allowed"
+          "patternErrorMessage": "This symbol is not allowed",
+          "order": 0
         },
         "argon.directories.extension": {
           "type": "string",
           "default": ".lua",
           "description": "Default extension of script files when ported from Roblox Studio",
-          "enum": [".lua", ".luau"]
+          "enum": [".lua", ".luau"],
+          "order": 1
+        },
+        "argon.directories.compatibilityMode": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enables Rojo name space, required for external tooling (excluding Roblox LSP)",
+          "order": 2
         },
         "argon.extension.autoRun": {
           "type": "boolean",
@@ -66,42 +76,36 @@
           "description": "Whether Argon should start automatically",
           "order": 0
         },
-        "argon.extension.autoUpdate": {
-          "type": "boolean",
-          "default": false,
-          "description": "Whether Argon should update class database automatically",
-          "order": 1
-        },
-        "argon.extension.autoCreateFolder": {
+        "argon.extension.autoSetup": {
           "type": "boolean",
           "default": true,
-          "description": "Whether Argon should create root folder automatically",
-          "order": 2
+          "description": "Whether Argon should create root folder and project file automatically",
+          "order": 1
         },
         "argon.extension.autoLaunchStudio": {
           "type": "boolean",
           "default": false,
           "description": "Whether Argon should launch Roblox Studio automatically",
-          "order": 3
+          "order": 2
         },
         "argon.extension.hideNotifications": {
           "type": "boolean",
           "default": false,
           "description": "Whether Argon should hide notifications in the bottom right corner",
-          "order": 4
+          "order": 3
         },
         "argon.extension.openInPreview": {
           "type": "boolean",
           "default": true,
           "description": "Whether Argon should open files in preview mode by default",
-          "order": 5
+          "order": 4
         },
         "argon.extension.debugMode": {
           "type": "string",
           "default": "Play",
           "description": "Whether Argon should Play or Run playtest",
           "enum": ["Play", "Run"],
-          "order": 6
+          "order": 5
         },
         "argon.server.host": {
           "type": "string",
