Updated to ES21, custom directories, new getParent

--- a/RBLX Plugin/.argon.project.json
+++ b/RBLX Plugin/.argon.project.json
@@ -12,7 +12,7 @@
 		},
 		"LocalizationService": {
 			"$className": "LocalizationService",
-			"$path": "src/LocalizationService"
+			"$path": "src/test"
 		},
 		"ReplicatedFirst": {
 			"$className": "ReplicatedFirst",
