--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -170,6 +170,10 @@
     ],
     "jsonValidation": [
       {
+        "fileMatch": ".argon.project.json",
+        "url": "./assets/.project.schema.json"
+      },
+      {
         "fileMatch": "default.project.json",
         "url": "./assets/.project.schema.json"
       },
