New plugin dir, custom paths in open in editor and two-way sync

--- a/RBLX Plugin/.argon.project.json
+++ b/RBLX Plugin/.argon.project.json
@@ -26,7 +26,12 @@
 			"$path": "src/SoundService"
 		},
 		"StarterGui": {
-			"$path": "src/StarterGui"
+			"$path": "src/StarterGui",
+			"Argon": {
+				"Main": {
+					"$path": "src"
+				}
+			}
 		},
 		"StarterPack": {
 			"$path": "src/StarterPack"
