--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -12,7 +12,8 @@
     "Roblox",
     "Lua",
     "Luau",
-    "Sync"
+    "Sync",
+    "Tools"
   ],
   "categories": [
     "Other"
@@ -197,23 +198,15 @@
     "type": "git",
     "url": "https://github.com/DervexHero/Argon.git"
   },
-  "scripts": {
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
-  },
   "devDependencies": {
+    "@types/vscode": "^1.74.0",
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.0",
     "@types/node": "16.x",
-    "@types/vscode": "^1.72.0",
-    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.24.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "firebase": "^9.15.0"
+    "typescript": "^4.8.4",
+    "@vscode/test-electron": "^2.1.5"
   }
 }
