Rename commands, stats counting

--- a/VSC Extension/package.json
+++ b/VSC Extension/package.json
@@ -44,7 +44,7 @@
       },
       {
         "command": "argon.startDebug",
-        "title": "Run",
+        "title": "Start",
         "category": "Argon"
       },
       {
